FIX color too lightly REMOVE @kuen/components on loader, whether use components is up to user

--- a/backpacks/components/src/stylus/settings/_theme.styl
+++ b/backpacks/components/src/stylus/settings/_theme.styl
@@ -13,9 +13,9 @@ $theme-light = {
   cards: #fff,
   text: {
     theme: #fff,
-    primary: rgba(#24292e, .87),
-    secondary: rgba(#24292e, .54),
-    disabled: rgba(#24292e, .38),
+    primary: rgba(#333, .87),
+    secondary: rgba(#333, .54),
+    disabled: rgba(#33, .38),
     link: $blue.dark,
     link-hover: $grey.darkest
   }
